plugins/javaFX/testData/highlighting/valueOfAcceptance.fxml
<?import javafx.scene.layout.GridPane?>
<?import java.lang.String?>
<?import javafx.collections.FXCollections?>
<?import java.util.ArrayList?>
<?import java.lang.Double?>
<GridPane xmlns:fx="http://javafx.com/fxml">
  <fx:define>
    <FXCollections fx:factory="observableArrayList">
      <ArrayList fx:value=<error descr="Unable to coerce 'A' to java.util.ArrayList.">"A"</error>/>
    </FXCollections>

    <FXCollections fx:factory="observableArrayList">
      <String fx:value="A"/>
      <Double value="5"/>
    </FXCollections>

  </fx:define>
</GridPane>
